# wirectrl

./: CMakeLists.txt  README  README.md  main.cpp  test.conf
cmake/: detect_distro.sh  os-detect.cmake  systemd.cmake
core/: CMakeLists.txt
core/include/core/: application.h  dbus-application.h  exception.h  final.h  ini.h  sd_event_loop.h
core/src/: application.cpp  dbus-application.cpp  exception.cpp  final.cpp  ini.cpp  sd_event_loop.cpp  sig_set_ctrl.h
core/testing/: CMakeLists.txt  core-tests.cpp  test-ini_file.cpp  tests-read_line_ext.cpp  tests-trim.cpp
iniread/: CMakeLists.txt
iniread/include/iniread/: iniread.h
iniread/src/: reader.cpp
wirectrld/: CMakeLists.txt  install.cmake
wirectrld/scripts/: dbus.conf  system.d.service  uninstall.sh  wirectrl.conf
wirectrld/src/: application.cpp  application.h  config.cpp  config.h  gpio.cpp  main.cpp  opts.cpp  opts.h  types.h
